argo-workflows/resources/argo-server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argo-server
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/app-root: "/"
spec:
  tls:
  - hosts:
    - workflows.apps.argoproj.io
    secretName: argo-workflows-secret
  rules:
  - host: workflows.apps.argoproj.io
    http:
      paths:
      - path: /
        backend:
          serviceName: argo-server
          servicePort: 2746
